--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,9 +1,10 @@
 AllCops:
   TargetRubyVersion: 3.3.4
+  SuggestExtensions: false
+  
+Style/Documentation:
+  Enabled: false
 
 require:
   - rubocop-rails
   - rubocop-performance
-  - rubocop-factory_bot
-  - rubocop-rspec_rails
-  - rubocop-rspec
